	  But note that the namespace *is* required in Server.createOntologyReHosted.
		
	- TempOntologyInfo: new field isOntResolvable that a client (the ORR portal) can use to determine whether
	  it's appropriate to register an ontology in re-hosted mode. Set by TempOntologyHelper.getTempOntologyInfo. 

2009-11-30   1.7.0.alpha
	- Setting version to 1.7.0.alpha reflecting all the 1.6.1+ changes below.
	  This is also sync'ed with ontmd module.
	- Current Ont version: MMI Ontology and Term URI Resolver. Version 1.4.2.beta (20091125194637)


2009-11-24   1.6.2.alpha6
	- UserAccountCreatorUpdater: detect duplicate username error to report a more
	  meaningful error message.
	  
	
2009-11-24   1.6.2.alpha5
	Issue #222 - duplicate of issue #43: Handle non-UTF8 and UTF8 inputs
	- NO conversions are attempted (I wrote some preliminary code for that but it's now
	  commented out.  See Utf8Util.convertToUtf8).
	- Instead, the file is tried to be read with Jena and, if it fails, then the catched exception is
	  examined to extract any parse-exception; also the Utf8Util'ity to verify UTF-8 is called
	  to complement the message with the possible charsets.
	- Tested with resource/theme-windows-1250.owl (a file in windows-1250 encoding)
	- In general, the handling of UTF-8 should be complete now.
	  
	
2009-11-18   1.6.2.alpha5
	- OntologyUploader: set "UTF-8" charset explicitly to the filePart

2009-11-17   1.6.2.alpha5
	Issue #222 - duplicate of issue #43: Handle non-UTF8 and UTF8 inputs
	
	New Utf8Util.readFileWithConversionToUtf8: tested internally but yet to be called at
	appropriate places.  TODO
	
	Committed:
		Util2.java
		Utf8Util.java
		ReadFileResult.java (new)
		
	Modified locally but not yet committed (as they need updates):
		- Server.java
		- TempOntologyHelper.java
	
	***NOTE: update the following text about a preliminary approach***
	
	- Not yet doing any conversion. But I did the following change to check for UTF-8 because